src/index.css
a,abbr,acronym,address,applet,article,aside,audio,b,big,blockquote,body,canvas,caption,center,cite,code,dd,del,details,dfn,div,dl,dt,em,embed,fieldset,figcaption,figure,footer,form,h1,h2,h3,h4,h5,h6,header,hgroup,html,i,iframe,img,ins,kbd,label,legend,li,mark,menu,nav,object,ol,output,p,pre,q,ruby,s,samp,section,small,span,strike,strong,sub,summary,sup,table,tbody,td,tfoot,th,thead,time,tr,tt,u,ul,var,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:after,blockquote:before,q:after,q:before{content:'';content:none}table{border-collapse:collapse;border-spacing:0}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration,input[type=search]::-webkit-search-results-button,input[type=search]::-webkit-search-results-decoration{-webkit-appearance:none;-moz-appearance:none}input[type=search]{-webkit-appearance:none;-moz-appearance:none;-webkit-box-sizing:content-box;-moz-box-sizing:content-box;box-sizing:content-box}textarea{overflow:auto;vertical-align:top;resize:vertical}audio,canvas,video{display:inline-block;max-width:100%}audio:not([controls]){display:none;height:0}[hidden]{display:none}html{font-size:100%;-webkit-text-size-adjust:100%;-ms-text-size-adjust:100%}a:focus{outline:thin dotted}a:active,a:hover{outline:0}img{border:0;-ms-interpolation-mode:bicubic}figure{margin:0}form{margin:0}fieldset{border:1px solid silver;margin:0 2px;padding:.35em .625em .75em}legend{border:0;padding:0;white-space:normal}button,input,select,textarea{font-size:100%;margin:0;vertical-align:baseline}button,input{line-height:normal}button,select{text-transform:none}button,html input[type=button],input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer}button[disabled],html input[disabled]{cursor:default}input[type=checkbox],input[type=radio]{box-sizing:border-box;padding:0}input[type=search]{-webkit-appearance:textfield;-moz-box-sizing:content-box;-webkit-box-sizing:content-box;box-sizing:content-box}input[type=search]::-webkit-search-cancel-button,input[type=search]::-webkit-search-decoration{-webkit-appearance:none}button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0}textarea{overflow:auto;vertical-align:top}table{border-collapse:collapse;border-spacing:0}button,html,input,select,textarea{color:#222}::-moz-selection{background:#b3d4fc;text-shadow:none}::selection{background:#b3d4fc;text-shadow:none}img{vertical-align:middle}fieldset{border:0;margin:0;padding:0}textarea{resize:vertical}.chromeframe{margin:.2em 0;background:#ccc;color:#000;padding:.2em 0}

.clearfix:after {visibility: hidden; display: block; font-size: 0; content: ''; clear: both; height: 0; }

* { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }

.visuallyHidden:not(:focus):not(:active) { position: absolute; width: 1px; height: 1px; margin: -1px;border: 0;padding: 0;white-space: nowrap;clip-path: inset(100%);clip: rect(00 0 0);overflow: hidden;}

@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");

body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.main{
  background: #F8F8F8;
  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7fa 74%);
  padding-top:10px;
}

.searchContainer{
  margin-bottom:10px;
  padding: 15px 10px 0 10px;
  border-radius: 10px;
  background-color: rgba(255, 255, 255, 0.5)
}

.colorBox{
  border: solid #ffcd36 2px;
  background-color: #F8F8F8;
  padding: 20px 0;
  border-radius: 15px;
  margin-bottom:10px;
  text-align: center;
}

.wrapper{
  max-width: 1350px;
  width:90%;
  margin: 0 auto;
}

h1{
  font-size: 6.5rem;
  font-weight:200;
  margin: 5% auto;
  color:rgba(54, 54, 54, 0.897);
  text-shadow:2px 2px #ffcd36;
}

h2,
p{
  color:#000;
  font-family: 'open sans';
  text-transform: normal;
}

h1,
h2{
  font-family: 'Courier New', Courier, monospace
}

h2{
  font-size: 2rem;
}

p{
  font-size:2rem;
}

span{
  text-transform: uppercase;
  font-weight: 800;
  text-shadow:3px 3px #ffcd36;
}

.iconContainer{
  display:flex;
  justify-content: space-evenly;
}

.weatherIcons{
  font-size: 6rem;
  margin: 2% 0;
  transition:400ms ease;
  padding:5px;
  color:#ffcd36;
}

input[type=text],
button{
  border: 3px solid transparent;
  border-radius: 50px;
  padding:10px;
  transition: ease-in 300ms;
}

input[type=text],
button{
  display:inline-block;
  margin: 10px auto;
}

input[type=text]{
  width: 60%;
  text-align: center;
  padding:20px;
  border-bottom:solid 3px #ffcd36;
}

input[type=text]:focus,
input[type=text]:hover{
  border: solid 3px #ffcd36;
}

button{
  width:30%;
  color:#fff;
  background:#ffcd36;
}

button:hover,
button:focus{
  color: #000;
  border: solid 3px #ffcd36;
  background: #fff;
}

.searchContainer{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-self: center;
  text-align: center;
}

.dateTime{
  text-align: center;
  margin: 5%;
}

.dateTime p{
  font-size: 1.3rem;
}

.modal{
  opacity:0.8;
}

.modal p{
  margin:10px;
}

.row1,
.row2{
  flex: 1 0 auto;
  display:flex;
}

.row3{
  margin-top:40px;
  border-top:5px solid rgba(54, 54, 54, 0.897);
  border-bottom:5px solid rgba(54, 54, 54, 0.897);
}

.square{
  min-width: 50%;
  border-radius: 15px;
  text-transform: capitalize;
  transition: 200ms ease;
  border: solid 3px transparent;
}

.square:hover{
  scale:1.1;
}

.squareOne,
.squareThree{
  display:flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.squareOne p{
  font-size: 4rem;
  padding-left: 20px;
}

.squareTwo p:first-child{
  display:flex;
  justify-content: center;
  font-size:6rem;
  font-weight: 800;
}

.squareThree p{
  font-size: 3rem;
}

.squareFour{
  display:flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.squareFour p,
.squareFive p{
  font-size: 3rem;
}

.chevron{
  margin:5px;
  font-size:2rem;
}

.weatherIcon{
  color:rgba(54, 54, 54, 0.897);
  font-size: 2rem;
}

.copyright{
  text-align: center;
  background-color: #222;
  width:100%;
  padding:10px;
}

footer{
  margin-top:14%;
}

.copyright p {
  font-size:1rem;
}

@media(max-width: 740px){
  .square{
    min-width: 100%;
  }

  .squareOne{
    text-align: center;
  }

  .square:hover{
    scale:none;
  }

  .row1,
  .row2{
    display:block;
  }
}

@media(max-width: 400px){
  h1{
    font-size: 5rem;
  }

  .weatherIcons{
    font-size: 4.5rem;
  }

  input[type=text]{
    width: 90%;
  }

  button{
    width: 70%;
  }

  .searchIcon{
    margin-top:20px;
  }

  .square p{
    font-size:2.6rem;
  }

  .desc{
    margin: 0;
  }

  .squareTwo p:first-child{
    font-size:5rem;
  }
}

